<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="76px"
        android:background="@drawable/bg_top">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="66px"
            android:layout_height="66px"
            android:background="#00000000"
            android:onClick="btnClick"
            android:src="@drawable/btn_home_bg" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#bacad9"
            android:textSize="32px" />

        <ImageButton
            android:id="@+id/btn_webhome"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_toStartOf="@+id/btn_back"
            android:background="#00000000"
            android:onClick="btnClick"
            android:src="@drawable/btn_init_bg" />

        <!--

        <ImageButton
            android:id="@+id/btn_re"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_toStartOf="@+id/btn_back"
            android:onClick="btnClick"
            android:src="@drawable/btn_reload_bg"
            android:background="#00000000"
            android:visibility="invisible"
            />
-->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="66px"
            android:layout_height="66px"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:onClick="btnClick"
            android:src="@drawable/btn_back_bg" />

    </RelativeLayout>


    <!--<androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
    <!--android:id="@+id/swipe_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginTop="76px">-->

    <com.korail.motrex.webapp.common.WebViewCustom
        android:id="@+id/webView"
        android:layout_width="1280px"
        android:layout_height="match_parent"
        android:layout_marginTop="76px"
        android:scrollbarSize="10dp"
        android:scrollbarThumbHorizontal="@drawable/curtom_scrollbar_thumb_h"
        android:scrollbarThumbVertical="@drawable/curtom_scrollbar_thumb"
        android:scrollbarTrackHorizontal="@drawable/custom_scrollbar_track"
        android:scrollbarTrackVertical="@drawable/custom_scrollbar_track"></com.korail.motrex.webapp.common.WebViewCustom>


    <RelativeLayout
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="76px"
        android:visibility="gone">

        <Button
            android:id="@+id/test_btn01"
            android:layout_width="100px"
            android:layout_height="100px"
            android:onClick="btnClick"
            android:text="업"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/test_btn02"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginTop="100px"
            android:onClick="btnClick"
            android:text="다운"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/test_btn03"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginTop="200px"
            android:onClick="btnClick"
            android:text="왼"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/test_btn04"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginTop="300px"
            android:onClick="btnClick"
            android:text="오른"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/test_btn05"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginTop="400px"
            android:onClick="btnClick"
            android:text="줌 인"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/test_btn06"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginTop="500px"
            android:onClick="btnClick"
            android:text="줌 아웃"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/test_btn07"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginTop="600px"
            android:onClick="btnClick"
            android:text="줌 초기화"
            android:textColor="#ffffff"
            android:textSize="25sp" />


    </RelativeLayout>

    <!--</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

    <View
        android:id="@+id/corverView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></View>


    <RelativeLayout
        android:id="@+id/btn_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1170px"
        android:layout_marginTop="514px"
        android:background="@drawable/btn_box">

        <ImageButton
            android:id="@+id/btn_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="91px"
            android:background="@drawable/btn_p_bg"
            android:onClick="btnClick" />

        <ImageButton
            android:id="@+id/btn_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14px"
            android:background="@drawable/btn_n_bg"
            android:onClick="btnClick" />


        <ImageButton
            android:id="@+id/btn_nn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="184px"
            android:background="@drawable/btn_web_init_bg"
            android:onClick="btnClick" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="640px"
        android:layout_height="match_parent"
        android:layout_marginLeft="1280px"
        android:layout_marginTop="76px"
        android:background="@drawable/bg_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/btn_01"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:drawableTop="@drawable/btn_site_01_bg"
                android:onClick="btnClick"
                android:text="@string/daum"
                android:textColor="@color/btn_text_color"
                android:textSize="24px"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_03"
                app:layout_constraintEnd_toStartOf="@+id/btn_02"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_02"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_01"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:drawableTop="@drawable/btn_site_02_bg"
                android:onClick="btnClick"
                android:text="@string/naver"
                android:textColor="@color/btn_text_color"
                android:textSize="22px"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_01"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_01"
                app:layout_constraintTop_toTopOf="@+id/btn_01" />

            <Button
                android:id="@+id/btn_03"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_02"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_03"
                android:onClick="btnClick"
                android:text="유튜브"
                android:textColor="@color/btn_text_color"
                android:textSize="22px"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_04"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_01" />

            <Button
                android:id="@+id/btn_04"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_03"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:drawableTop="@drawable/btn_site_04_bg"
                android:onClick="btnClick"
                android:text="@string/korail"
                android:textColor="@color/btn_text_color"
                android:textSize="22px"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_03"
                tools:layout_editor_absoluteY="236dp"
                app:layout_constraintTop_toTopOf="@+id/btn_03"
                app:layout_constraintBottom_toBottomOf="@+id/btn_03"
                />

            <Button
                android:id="@+id/btn_05"
                android:layout_width="100px"
                android:layout_height="150px"
                android:layout_below="@+id/btn_04"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:drawableStart="@drawable/btn_site_05_bg"
                android:onClick="btnClick"
                android:text="KTX매거진"
                android:textColor="#d9000000"
                android:textSize="18px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/btn_01"
                app:layout_constraintTop_toBottomOf="@+id/btn_04"
                android:visibility="gone"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="557px"
            android:drawableLeft="@drawable/icon_nomedia"
            android:drawablePadding="20px"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/player_alat_message"
            android:textColor="#B59F64"
            android:textSize="34px"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:layout_marginTop="70px"
        android:progress="100"
        android:progressDrawable="@drawable/progressbar_web"
        android:visibility="invisible" />


    <RelativeLayout
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b2000000"
        android:onClick="btnClick"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="80px"
            android:layout_marginRight="20px"
            android:background="@drawable/btn_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130px"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/gudie_title"
            android:textColor="#FFFFFF"
            android:textSize="40px"
            android:visibility="invisible" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20px"
            android:layout_marginBottom="20px"
            android:background="@drawable/cm_2" />


        <TextView
            android:id="@+id/message_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="440px"
            android:layout_marginRight="20px"
            android:gravity="center"
            android:lineSpacingExtra="20px"
            android:text="@string/gudie_message"
            android:textColor="#FFFFFF"
            android:textSize="40px" />

        <TextView
            android:id="@+id/message_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140px"
            android:gravity="center"
            android:lineSpacingExtra="20px"
            android:text="@string/gudie_message2"
            android:textColor="#FFFFFF"
            android:textSize="40px" />


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230px"
            android:background="@drawable/cm" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="540px"
            android:layout_marginRight="190px"
            android:gravity="right"
            android:text="@string/guide_text_01"
            android:textColor="#FFFFFF"
            android:textSize="32px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="620px"
            android:layout_marginRight="190px"
            android:gravity="right"
            android:text="@string/guide_text_02"
            android:textColor="#FFFFFF"
            android:textSize="32px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="711px"
            android:layout_marginRight="190px"
            android:gravity="right"
            android:text="@string/guide_text_03"
            android:textColor="#FFFFFF"
            android:textSize="32px" />

    </RelativeLayout>


</RelativeLayout>